--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <h2 class="text-2xl sm:text-3xl font-bold">Contact</h2>
     <p class="mt-4 text-neutral-300">For partnerships, press keys, and support, please reach out through a single channel.</p>
     <div class="mt-6 flex flex-wrap items-center gap-3">
-      <a href="mailto:hello@crowinteractive.dev" class="px-4 py-2 rounded-xl bg-white text-neutral-900 font-semibold hover:bg-white/90">contact@crowinteractivegames.com</a>
+      <a href="mailto:contact@crowinteractivegames.com" class="px-4 py-2 rounded-xl bg-white text-neutral-900 font-semibold hover:bg-white/90">contact@crowinteractivegames.com</a>
       <a href="https://store.steampowered.com/developer/crow" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-xl border border-white/20 hover:border-white/40">Publisher Page</a>
       <a href="https://discord.gg/nUbnxYNqUr" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-xl border border-white/20 hover:border-white/40">Join Discord</a>
     </div>
